Avoid panic on error path, from PR 45607. The error path is exercised because this is using DIOCGPART to get the volume size, which doesn't work on wedges. It should be calling getdisksize() instead.